# bugbounty-agent

./: .env.example  .gitignore  CLAUDE.md  CONVERSATION_LOG.md  Makefile  Plans.md  README.md  SYNTHESIS.md
.github/workflows/: ci.yml
agents/: pyproject.toml  requirements-lock.txt
agents/arbiter/: agent.py  evaluator.py  test_evaluator.py  voter.py
agents/common/: block_cursor.py  config.py  contracts.py  crypto.py  inference.py  ipfs.py  test_block_cursor.py  test_contracts.py  test_crypto.py  test_inference.py  test_ipfs.py
agents/executor/: abi_resolver.py  fork_runner.py  patch_guidance.py  service.py  state_diff.py  test_patch_guidance.py  test_state_diff.py
agents/hunter/: agent.py  poc_generator.py  reasoning.py  scanner.py  submitter.py  test_scanner.py  test_submitter.py
agents/keeper/: timeout_keeper.py
agents/protocol/: agent.py  patch_receiver.py  risk_model.py  test_triage.py  triage.py
contracts/: flat_ArbiterContract.sol  flat_BountyRegistry.sol  flat_BugSubmission.sol  flat_IdentityRegistry.sol  flat_MockUSDC.sol  flat_ReputationRegistry.sol  flat_ValidationRegistry.sol  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ArbiterContract.sol  BountyRegistry.sol  BugSubmission.sol
contracts/test/: ArbiterContract.t.sol  BountyRegistry.t.sol  BugSubmission.t.sol  FullLifecycle.t.sol  IdentityRegistry.t.sol  MockUSDC.t.sol  ReputationRegistry.t.sol  ValidationRegistry.t.sol
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  config.test.ts  config.ts  contracts.ts  index.css
scripts/: demo_flow.py  deploy_and_register.py
vulnerable/: AccessControlToken.sol  OracleManipulation.sol  ReentrancyVault.sol
(+27 files in other folders)
