[project]
name = "bugbounty-agents"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "web3==7.14.1",
    "eth-abi==5.2.0",
    "openai==2.29.0",
    "eciespy==0.4.6",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "slither-analyzer==0.11.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
